--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -36,7 +36,7 @@
                     <ul>
                         <li><a href="home.html"><i class="material-icons">home</i></a></li>
                         <li><a href="info.html"><i class="material-icons md-40 white-color">email</i></a></li>
-                        <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
+                        <li><a href="noa1.html"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
                                     class="material-icons white-color">grid_view</i></a></li>
                     </ul>
