--- a/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
+++ b/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
@@ -16,7 +16,9 @@
             <i class="fas fa-map-marker-alt"> Your Location Now</i>
             <p>Sun Fransisco, California, USA</p>
         </div>
-        <div class="details__dayTime"></div>
+        <div class="details__dayTime">
+            <div class="card">Moonlight</div>
+        </div>
         <div class="details__temp">
             <p class="text">20 <span>&#8451;</span></p>
         </div>
