--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="dist/style.css">
     <link rel="stylesheet" href="dist/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" <title>
-    </title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <title></title>
 </head>
 
 <body>
@@ -31,10 +31,10 @@
 
         <div id="control">
             <div id="control__back">
-               <a   href="home.html">  <i class="fas fa-angle-left"></i></a>
+                <a href="home.html"> <i class="fas fa-angle-left"></i></a>
             </div>
             <div id="control__filter">
-             <i  class="fas fa-sliders-h"></i>
+                <i class="fas fa-sliders-h"></i>
             </div>
         </div>
 
@@ -50,26 +50,58 @@
                     <img src="Ref/2021-12-15 (3).png" alt="">
                 </div>
                 <div class="box">
-                    Mo
+                   <P> Mo</P>
                 </div>
                 <div class="box">
-                    Tu
+                    <P>  Tu</P>
                 </div>
                 <div class="box">
-                    We
+                    <P>    We</P>
                 </div>
                 <div class="box">
-                    Th
+                    <P> Th</P>
                 </div>
                 <div class="box">
-                    Fr
+                    <P>  Fr</P>
                 </div>
             </div>
 
 
             <div id="landing__dailytaskslist">
+                <ul class="list">
+                    <li class="list__line">
+                        <div class="box-logo">
+                            <i class="fas fa-basketball-ball"></i>
+                        </div>
+                            <P class="logo"> Dribbble </P>
+                    </li>
+                    <li class="list__line">
+                       <div class="box">
+                            <p> new post </p>
+                    </div>
+                        <div class="box">
+                            <i class="fas fa-ellipsis-h"></i>
+                        </div>
+                    </li>
 
+                </ul>
+                <ul class="list">
+                    <li class="list__line">
+                        <div class="box-logo">
+                          <h> Bē </h>
+                        </div>
+                            <P class="logo"> Behance </P>
+                    </li>
+                    <li class="list__line">
+                       <div class="box">
+                            <p> fix cace </p>
+                    </div>
+                        <div class="box">
+                            <i class="fas fa-ellipsis-h"></i>
+                        </div>
+                    </li>
 
+                </ul>
 
 
 
