--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -32,6 +32,54 @@
                     </path>
                 </g>
             </svg>
+            <div class="header__icon__scanner">
+                <div class="header__icon__scanner__scene">
+                    <svg viewBox="0 0 512 512">
+                        <g>
+                            <path d="M0,0v233.739h233.739V0H0z M200.348,200.348H33.391V33.391h166.957V200.348z" />
+                        </g>
+                        <g>
+                            <rect x="66.783" y="66.783" width="100.174" height="100.174" />
+                        </g>
+                        <g>
+                            <path
+                                d="M278.261,0v233.739H512V0H278.261z M478.609,200.348H311.652V33.391h166.957V200.348z" />
+                        </g>
+                        <g>
+                            <rect x="345.043" y="66.783" width="100.174" height="100.174" />
+                        </g>
+                        <g>
+                            <path
+                                d="M0,278.261V512h233.739V278.261H0z M200.348,478.609H33.391V311.652h166.957V478.609z" />
+                        </g>
+                        <g>
+                            <rect x="66.783" y="345.043" width="100.174" height="100.174" />
+                        </g>
+                        <g>
+                            <polygon points="345.043,311.652 345.043,278.261 278.261,278.261 278.261,512 345.043,512 345.043,478.609 311.652,478.609 
+			311.652,411.826 345.043,411.826 345.043,378.435 311.652,378.435 311.652,311.652" />
+                        </g>
+                        <g>
+                            <rect x="478.609" y="278.261" width="33.391" height="33.391" />
+                        </g>
+                        <g>
+                            <polygon
+                                points="478.609,356.174 478.609,478.609 445.217,478.609 445.217,512 512,512 512,356.174" />
+                        </g>
+                        <g>
+                            <rect x="378.435" y="278.261" width="66.783" height="33.391" />
+                        </g>
+                        <g>
+                            <polygon points="445.217,378.435 445.217,345.043 378.435,345.043 378.435,445.217 445.217,445.217 445.217,411.826 
+			411.826,411.826 411.826,378.435" />
+                        </g>
+                        <g>
+                            <rect x="378.435" y="478.609" width="33.391" height="33.391" />
+                        </g>
+                    </svg>
+                    <div class="header__icon__scanner__scene__line"></div>
+                </div>
+            </div>
         </button>
         <button class="header__item">Tokens</button>
         <button class="header__item">Cards</button>
@@ -48,12 +96,15 @@
                     transform="matrix(1, 0, 0, 1, 164.981976, 87.621326)"></path>
             </svg>
             <div class="header__icon__notification" id="note1">
-                <svg viewBox="0 0 4091.27 4091.73">
-                    <g>
+                <!doctype html>
+                <svg viewBox="-1908.384 -2028.418 4274.061 4274.544">
+                    <g transform="matrix(1.044679, 0, 0, -1.044679, -1908.383789, 2246.126221)">
                         <path
-                            d="M4030.06 2540.77c-273.24,1096.01 -1383.32,1763.02 -2479.46,1489.71 -1095.68,-273.24 -1762.69,-1383.39 -1489.33,-2479.31 273.12,-1096.13 1383.2,-1763.19 2479,-1489.95 1096.06,273.24 1763.03,1383.51 1489.76,2479.57l0.02 -0.02z" />
+                            d="M4030.06 2540.77c-273.24,1096.01 -1383.32,1763.02 -2479.46,1489.71 -1095.68,-273.24 -1762.69,-1383.39 -1489.33,-2479.31 273.12,-1096.13 1383.2,-1763.19 2479,-1489.95 1096.06,273.24 1763.03,1383.51 1489.76,2479.57l0.02 -0.02z">
+                        </path>
                         <path fill="#2E3137"
-                            d="M2947.77 1754.38c40.72,-272.26 -166.56,-418.61 -450,-516.24l91.95 -368.8 -224.5 -55.94 -89.51 359.09c-59.02,-14.72 -119.63,-28.59 -179.87,-42.34l90.16 -361.46 -224.36 -55.94 -92 368.68c-48.84,-11.12 -96.81,-22.11 -143.35,-33.69l0.26 -1.16 -309.59 -77.31 -59.72 239.78c0,0 166.56,38.18 163.05,40.53 90.91,22.69 107.35,82.87 104.62,130.57l-104.74 420.15c6.26,1.59 14.38,3.89 23.34,7.49 -7.49,-1.86 -15.46,-3.89 -23.73,-5.87l-146.81 588.57c-11.11,27.62 -39.31,69.07 -102.87,53.33 2.25,3.26 -163.17,-40.72 -163.17,-40.72l-111.46 256.98 292.15 72.83c54.35,13.63 107.61,27.89 160.06,41.3l-92.9 373.03 224.24 55.94 92 -369.07c61.26,16.63 120.71,31.97 178.91,46.43l-91.69 367.33 224.51 55.94 92.89 -372.33c382.82,72.45 670.67,43.24 791.83,-303.02 97.63,-278.78 -4.86,-439.58 -206.26,-544.44 146.69,-33.83 257.18,-130.31 286.64,-329.61l-0.07 -0.05zm-512.93 719.26c-69.38,278.78 -538.76,128.08 -690.94,90.29l123.28 -494.2c152.17,37.99 640.17,113.17 567.67,403.91zm69.43 -723.3c-63.29,253.58 -453.96,124.75 -580.69,93.16l111.77 -448.21c126.73,31.59 534.85,90.55 468.94,355.05l-0.02 0z" />
+                            d="M2947.77 1754.38c40.72,-272.26 -166.56,-418.61 -450,-516.24l91.95 -368.8 -224.5 -55.94 -89.51 359.09c-59.02,-14.72 -119.63,-28.59 -179.87,-42.34l90.16 -361.46 -224.36 -55.94 -92 368.68c-48.84,-11.12 -96.81,-22.11 -143.35,-33.69l0.26 -1.16 -309.59 -77.31 -59.72 239.78c0,0 166.56,38.18 163.05,40.53 90.91,22.69 107.35,82.87 104.62,130.57l-104.74 420.15c6.26,1.59 14.38,3.89 23.34,7.49 -7.49,-1.86 -15.46,-3.89 -23.73,-5.87l-146.81 588.57c-11.11,27.62 -39.31,69.07 -102.87,53.33 2.25,3.26 -163.17,-40.72 -163.17,-40.72l-111.46 256.98 292.15 72.83c54.35,13.63 107.61,27.89 160.06,41.3l-92.9 373.03 224.24 55.94 92 -369.07c61.26,16.63 120.71,31.97 178.91,46.43l-91.69 367.33 224.51 55.94 92.89 -372.33c382.82,72.45 670.67,43.24 791.83,-303.02 97.63,-278.78 -4.86,-439.58 -206.26,-544.44 146.69,-33.83 257.18,-130.31 286.64,-329.61l-0.07 -0.05zm-512.93 719.26c-69.38,278.78 -538.76,128.08 -690.94,90.29l123.28 -494.2c152.17,37.99 640.17,113.17 567.67,403.91zm69.43 -723.3c-63.29,253.58 -453.96,124.75 -580.69,93.16l111.77 -448.21c126.73,31.59 534.85,90.55 468.94,355.05l-0.02 0z">
+                        </path>
                     </g>
                 </svg>
                 <div class="header__icon__notification__message">
@@ -61,12 +112,13 @@
                 </div>
             </div>
             <div class="header__icon__notification" id="note2">
-                <svg viewBox="0 0 2000 1975.1">
-                    <g>
-                        <path d="M1047.4,982.5l683.3,678.3c359.1-380.9,359.1-975.7,0-1356.6" />
-                        <path d="M997.5,1027.4l-673.3,668.3l673.3,279.3l673.3-279.3" />
-                        <path d="M972.6,957.6l698.3-693.3L1027.4,0L389,1541.2L972.6,957.6z" />
-                        <path d="M0,982.5c-0.5,252.3,95.9,495.1,269.3,678.3l668.3-1611" />
+                <!doctype html>
+                <svg viewBox="-586.527 -747.256 1864.721 1841.387">
+                    <g transform="matrix(0.932348, 0, 0, -0.932348, -586.525574, 1094.131348)">
+                        <path d="M1047.4,982.5l683.3,678.3c359.1-380.9,359.1-975.7,0-1356.6"></path>
+                        <path d="M997.5,1027.4l-673.3,668.3l673.3,279.3l673.3-279.3"></path>
+                        <path d="M972.6,957.6l698.3-693.3L1027.4,0L389,1541.2L972.6,957.6z"></path>
+                        <path d="M0,982.5c-0.5,252.3,95.9,495.1,269.3,678.3l668.3-1611"></path>
                     </g>
                 </svg>
                 <div class="header__icon__notification__message">
@@ -74,12 +126,13 @@
                 </div>
             </div>
             <div class="header__icon__notification" id="note3">
-                <svg viewBox="0 0 336.41 337.42">
-                    <g>
-                        <path class="cls-1" d="M168.2.71l41.5,42.5L105.2,147.71l-41.5-41.5Z" />
-                        <path class="cls-1" d="M231.2,63.71l41.5,42.5L105.2,273.71l-41.5-41.5Z" />
-                        <path class="cls-1" d="M42.2,126.71l41.5,42.5-41.5,41.5L.7,169.21Z" />
-                        <path class="cls-1" d="M294.2,126.71l41.5,42.5L168.2,336.71l-41.5-41.5Z" />
+                <!doctype html>
+                <svg viewBox="149.217 7.063 326.567 327.542">
+                    <g transform="matrix(0.974826, 0, 0, -0.974826, 148.534195, 335.296265)">
+                        <path class="cls-1" d="M168.2.71l41.5,42.5L105.2,147.71l-41.5-41.5Z"></path>
+                        <path class="cls-1" d="M231.2,63.71l41.5,42.5L105.2,273.71l-41.5-41.5Z"></path>
+                        <path class="cls-1" d="M42.2,126.71l41.5,42.5-41.5,41.5L.7,169.21Z"></path>
+                        <path class="cls-1" d="M294.2,126.71l41.5,42.5L168.2,336.71l-41.5-41.5Z"></path>
                     </g>
                 </svg>
                 <div class="header__icon__notification__message">
@@ -124,11 +177,12 @@
                 </div>
             </div>
             <div class="header__icon__notification" id="note6">
-                <svg viewBox="0 0 254 254">
-                    <g>
+                <!doctype html>
+                <svg viewBox="222.001 114.863 183.081 162.982">
+                    <g transform="matrix(1.017365, 0, 0, -1.017365, 184.336258, 310.400818)">
                         <path class="st1" d="M171.8,130.3c4.4-7.6,11.5-7.6,15.9,0l27.4,48.1c4.4,7.6,0.8,13.8-8,13.8h-55.2c-8.7,0-12.3-6.2-8-13.8
                         L171.8,130.3z M118.8,37.7c4.4-7.6,11.4-7.6,15.8,0l6.1,11L155.1,74c3.5,7.2,3.5,15.7,0,22.9l-48.3,83.7
-                        c-4.4,6.8-11.7,11.1-19.8,11.6H46.9c-8.8,0-12.4-6.1-8-13.8L118.8,37.7z" />
+                        c-4.4,6.8-11.7,11.1-19.8,11.6H46.9c-8.8,0-12.4-6.1-8-13.8L118.8,37.7z"></path>
                     </g>
                 </svg>
                 <div class="header__icon__notification__message">
@@ -136,7 +190,7 @@
                 </div>
             </div>
             <div id="shadow"></div>
-            
+
         </button>
     </div>
     <div class="wallet">
