--- a/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
+++ b/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
@@ -17,6 +17,7 @@
             <p>Sun Fransisco, California, USA</p>
         </div>
         <div class="details__dayTime">
+            <div class="ball"></div>
             <div class="card">Moonlight</div>
         </div>
         <div class="details__temp">
