--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/noa1.html
@@ -87,7 +87,7 @@
                 </ul>
                 <ul class="list">
                     <li class="list__line">
-                        <div class="box-logo">
+                        <div class="box-log-blue">
                           <h> Bē </h>
                         </div>
                             <P class="logo"> Behance </P>
