--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
@@ -69,6 +69,27 @@
             <i class="fas fa-user-alt"></i>
         </div>
     </div>
+    <section>
+		<div class="container" id="object">
+            <div class="row">
+                <div id="box1" class="box"></div>
+                <div id="box2" class="box"></div>
+            </div>
+            <div class="row">
+                <div id="box3" class="box"></div>
+                <div id="box4" class="box"></div>
+            </div>
+            <div class="row">
+                <div class="circle"></div>
+            </div>
+            <div class="row">
+			    <div id="line" class="line"></div>
+            </div>
+            <div class="row">
+			    <div id="pot" class="pot"></div>
+            </div>
+		</div>
+	</section>
   
     
 </body>
