--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -90,11 +90,12 @@
     <div class="cartgarden">
         <div class="tree">
             <div class="flowerCircle">
+                <p>10% off first order!</p>
                 <span class="firstPetal"></span>
                 <span class="secondPetal"></span>
                 <span class="thirdPetal"></span>
-                <span class="fourPetal"></span>
-                <span class="fivePetal"></span>
+                <span class="fourthPetal"></span>
+                <span class="fifthPetal"></span>
             </div>
 
             <span class="tree__leaf tree__leaf--left"></span>
