--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -376,29 +376,58 @@
             </div>
         </div>
         <div class="wallet-value">
-            <div class="wallet-value__avrage"><span> MA /</span> EMA</div>
-            <div class="wallet-value__max">185.701,18</div>
-            <div class="wallet-value__graph">
+            <div class="wallet-value__grid">
+                <div class="wallet-value__grid__cell" id="cell1"></div>
+                <div class="wallet-value__grid__cell" id="cell2"></div>
+                <div class="wallet-value__grid__cell" id="cell3"></div>
+                <div class="wallet-value__grid__cell" id="cell4"></div>
+                <div class="wallet-value__grid__cell" id="cell5"></div>
+                <div class="wallet-value__grid__cell" id="cell6"></div>
+                <div class="wallet-value__grid__cell" id="cell7"></div>
+                <div class="wallet-value__grid__cell" id="cell8"></div>
+                <div class="wallet-value__grid__cell" id="cell9"></div>
+                <div class="wallet-value__grid__cell" id="cell10"></div>
+                <div class="wallet-value__grid__cell" id="cell11"></div>
+                <div class="wallet-value__grid__cell" id="cell12"></div>
+                <div class="wallet-value__grid__cell" id="cell13"></div>
+                <div class="wallet-value__grid__cell" id="cell14"></div>
+                <div class="wallet-value__grid__cell" id="cell15"></div>
+                <div class="wallet-value__grid__cell" id="cell16"></div>
+                <div class="wallet-value__grid__cell" id="cell17"></div>
+                <div class="wallet-value__grid__cell" id="cell18"></div>
+                <div class="wallet-value__grid__cell" id="cell19"></div>
+                <div class="wallet-value__grid__cell" id="cell20"></div>
+                <div class="wallet-value__grid__cell" id="cell21"></div>
+                <div class="wallet-value__grid__cell" id="cell22"></div>
+                <div class="wallet-value__grid__cell" id="cell23"></div>
+                <div class="wallet-value__grid__cell" id="cell24"></div>
+                <div class="wallet-value__grid__cell" id="cell25"></div>
+            </div>
+            <div class="wallet-value__scene">
+                <div class="wallet-value__scene__avrage"><span> MA /</span> EMA</div>
+                <div class="wallet-value__scene__max">185.701,18</div>
+                <div class="wallet-value__scene__graph">
 
-                <svg viewBox="935 -290 250 230" width="225.36" height="225.35">
-                    <path class="blue" d="M32.84,80.82c16.61-32.32,48.38-55.57,85.92-60.35"
-                        style="fill: none; stroke: #86D3D9; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
-                        transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
-                    <path class="tan"
-                        d="M58.33,216.51c-23.24-20.64-37.88-50.75-37.88-84.27c0-14.26,2.65-27.89,7.48-40.45"
-                        style="fill: none; stroke: #CDBDA5; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
-                        transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
-                    <path class="orange"
-                        d="M218.75,205.49c-20.67,24.13-51.36,39.42-85.62,39.42c-24.35,0-46.9-7.73-65.33-20.86"
-                        style="fill: none; stroke: #E7A788; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
-                        transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
-                    <path class="yellow"
-                        d="M133.13,19.56c62.23,0,112.68,50.45,112.68,112.68c0,23.06-6.93,44.5-18.81,62.36"
-                        style="fill: none; stroke: #F4C462; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
-                        transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
-                </svg>
+                    <svg viewBox="935 -290 250 230" width="225.36" height="225.35">
+                        <path class="blue" d="M32.84,80.82c16.61-32.32,48.38-55.57,85.92-60.35"
+                            style="fill: none; stroke: #86D3D9; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
+                            transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
+                        <path class="tan"
+                            d="M58.33,216.51c-23.24-20.64-37.88-50.75-37.88-84.27c0-14.26,2.65-27.89,7.48-40.45"
+                            style="fill: none; stroke: #CDBDA5; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
+                            transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
+                        <path class="orange"
+                            d="M218.75,205.49c-20.67,24.13-51.36,39.42-85.62,39.42c-24.35,0-46.9-7.73-65.33-20.86"
+                            style="fill: none; stroke: #E7A788; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
+                            transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
+                        <path class="yellow"
+                            d="M133.13,19.56c62.23,0,112.68,50.45,112.68,112.68c0,23.06-6.93,44.5-18.81,62.36"
+                            style="fill: none; stroke: #F4C462; stroke-linecap: round; stroke-miterlimit: 10; stroke-width: 5px;"
+                            transform="matrix(1, 0, 0, 1, 924.922546, -302.79953)"></path>
+                    </svg>
 
-                <h1>€ 182.057,83</h1>
+                    <h1>€ 182.057,83</h1>
+                </div>
             </div>
         </div>
         <div class="wallet-portfolio">
