--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
@@ -11,7 +11,7 @@
   <div class="Container">
     <div class="Container__header">
       <div class="Container__header__Avatar"><img src="Images/avatar.png"></div>
-      <div class="Container__header__Welcome"><strong>Welcome,Marina</strong>👏</div>
+      <div class="Container__header__Welcome">Welcome,Marina 👏</div>
       <div class="Container__header__MenuBtn"><img src="Images/MenuBtn.png"></div>
     </div>
     <div class="Container__Wil">Wil</div>
