--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -8,8 +8,8 @@
   <title>Gauge</title>
 </head>
 <body>
-    <svg width="500" height="500" fill="black" >
-      <circle cx="200" cy="200" r="100"/>
-    </svg>
+  <div class="gauge">
+    <object data="roi.svg" width="1000" height="1000"> </object>
+  </div>
 </body>
 </html>
