--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
@@ -67,7 +67,7 @@
                 <div id="landing__task-count">
 
 
-                    <div class="box" style="background-color: #ff98f6;">
+                    <div class="blue box">
                         <div id="box__flex">
                             <div class="box__header">
                                 <div class="box__title">
