--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -88,22 +88,19 @@
     </div>
 
     <div class="cartgarden">
-        <div class="tree">
+        <div class="maintree">
             <div class="flowerCircle">
                 <p>10% off first order!</p>
-                <!--<span class="firstPetal"></span>
-                <span class="secondPetal"></span>
-                <span class="thirdPetal"></span>
-                <span class="fourthPetal"></span>
-                <span class="fifthPetal"></span>-->
             </div>
-
             <span class="tree__leaf tree__leaf--left"></span>
             <span class="tree__leaf tree__leaf--right"></span>
-
-
+        </div>
+        <div class=tree2>
+            <span class="tree__leaf tree__leaf--left"></span>
+            <span class="tree__leaf tree__leaf--right"></span>
         </div>
         <img src="imgCart/grass.jpg">
+        
 
     </div>
 </body>
