--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/index.html
@@ -87,7 +87,7 @@
                         INA
                     </p>
                     
-                    <i class="fas fa-cloud-sun fa-gradient fa-4x"></i>
+                    <i class="fas fa-cloud-sun fa-gradient fa-4x" style="width: 70px; height: 70px;"></i>
                     
                     <i class="fa fa-tint"></i>
                     <h6 class="tint">27%</h6>
