--- a/01-HTML-CSS/09-animations/chaim/index.html
+++ b/01-HTML-CSS/09-animations/chaim/index.html
@@ -18,11 +18,11 @@
     <h2>Insurance and investing for your many sides</h2>
     <h3>We've been protecting people, businesses and futures for more than 90 years.</h3>
     <div class="box1">
-    <img src="1.jpeg" alt="">
+    <img src="1.png" alt="">
     <div class="box2">
-        <img src="2.jpeg" alt="">
+        <img src="2.png" alt="">
     <div class="box3">
-        <img src="3.jpeg" alt="">
+        <img src="3.png" alt="">
     <div class="box4"></div>
     <div class="box5"></div>
     
