--- a/01-HTML-CSS/09-animations/tamir/tamir.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir.html
@@ -5,37 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/07ce8225e4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/tamir.css">
     <title>html project</title>
 </head>
 
 <body>
-    <nav class="nav">
 
+    <div class="secrion1">
+        <div class=wrapper1>
+            <h2>Search</h2>
+            <i class="wrapper1__icon"><i class="fas fa-arrow-left"></i></i>
+        </div>
+    </div>
+    <nav class='first'>
+        <div class=wrapperfirst>
+            <ul>
+                <a href="cars">cars</a>
+                <a href="bikes">bikes</a>
+                <a href="trucks">trucks</a>
+            </ul>
+        </div>
     </nav>
-    <section1 class="section1">
-        <img class="saction1__img" src="audi/2.png" alt="">
-        <p class="saction1__info">AUDI A8 EXTERIOR LIGHTING</p>
-        <h1 class="saction1__sti">Meant to
-            Cause a Seen.</h1>
-        <img class="img" src="audi/1.png" alt="">
+    <div class='section2'>
+        <div class=wrapper2>
+            <i class=wrapper2__icon2><i class="fas fa-car-side"></i></i>
+            <p class='warapper2__info'>model:<span class='wrapper2__name'>siat</span></p>
+            <button class="wrapper2__button">1</button>
+        </div>
+    </div>
+    <div class='section3'>
+        <div class=wrapper3>
+            <i class="wrapper3__icon"><i class="fas fa-align-justify"></i></i>
+            <p class='info'>parameters</p>
+            <button class="button">3</button>
+        </div>
+    </div>
+    <div calss='section4'>
+        <div class=wrapper4>
+            <p class='info'>results</p>
+            <button class='wrapper4__bottun'>2</button>
+        </div>
+    </div>
 
+    <div class='card'>
+        <span class='card__img'>
+            <img
+                src="https://c.wallhere.com/photos/ea/f9/2016_Seat_Ateca_netcarshow_netcar_car_images_car_photo-469203.jpg!d">
+        </span>
+        <div class='card__info'>
+            <h1 class='card__des'>SEAT ateca x2 3s </h1>
+        </div>
+        <div class='card__subinfo'>
+            <p class='card__price'> $50,000 <i class="fas fa-fire"></i></p>
+            <p class='card__loc'><i class="fas fa-map-marker-alt"></i> 35 km away</p>
+            </p>
+        </div>
+    </div>
+    <div class='card2'>
+        <span class='card2__img'>
+            <img
+                src="https://mediacloud.carbuyer.co.uk/image/private/s--XgNhtddE--/v1579606190/carbuyer/seat-toledo-hatchback-2013-main.jpg">
+        </span>
+        <div class='card2__info'>
+            <h1 class='card2__des'>SEAT toledo fr i4s </h1>
+        </div>
+        <div class='card2__subinfo'>
+            <p class='card2__price'> $36,000 <i class="fas fa-fire"></i></p>
+            <p class='card2__loc'><i class="fas fa-map-marker-alt"></i> 30 km away</p>
+            </p>
+        </div>
+    </div>
+</body>
 
-    </section1>
-    <section2 class="section2">
-        <img class="saction2__img" src="audi/3.png" alt="">
-        <p class="saction2__info">THE ALL-NEW 2019 AUDI A8</p>
-        <h1 class="saction2__sti">Luxury found the
-            vehicle it deserves.</h1>
-        <h3 class="saction2__minfo">The dramatic stretch of the top light bar helps emphasize the width of the Audi A8.
-            Using advanced OLED lighting technology, the available OLED taillights with animation perform a
-            choreographed dance of light when the vehicle is locked or unlocked.
-        </h3>
-    </section2>
-    <section3 class="section3">
-        <img class="saction3__img" src="audi/5.png" alt="">
-
-    </section3>
 </body>
 
 </html>
