--- a/02-JavaScript/05-Objects and Arrays/tamir/homework.html
+++ b/02-JavaScript/05-Objects and Arrays/tamir/homework.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index2.js"></script>
+    <script src="homework.js"></script>
 </body>
 </html>
