--- a/02-JavaScript/05-Objects and Arrays/shani/arrays and functions/index.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/arrays and functions/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="hw.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
