--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
@@ -8,13 +8,21 @@
     <link rel="stylesheet" href="wil.css">
 </head>
 <body>
-<div class="TopBox"></div>
+
+<div class="TopBox">
+    <p>Sport club</p>
+    <h2>Muscle Magic</h2>
+    <h2>356789045673456</h2>
+    <p>Used 7/10 activities</p>
+    
+</div>
+</div>
 
 <div class="Box">
-    <div class="BoxOptions"><img src="" alt=""></div>
-    <div class="BoxOptions"><img src="Images/2.png" alt=""></div>
-    <div class="BoxOptions"><img src="Images/4.png" alt=""></div>
-    <div class="BoxOptions"><img src="" alt=""></div>
+    <div class="BoxOptions"><img src="Images/add.png" alt=""><p>Refill activities</p><img src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/friends.png" alt=""><p>Pass to a friend</p><img src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/location.png" alt=""><p>Our clubs</p><img src="Images/arrow.png"></div>
+    <div class="BoxOptions"><img src="Images/settings.png" alt=""><p>Account setup</p><img src="Images/arrow.png"></div>
 </div>
 
     
