--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -8,8 +8,19 @@
   <title>Gauge</title>
 </head>
 <body>
-  <div class="gauge">
-    <object data="roi.svg" width="1000" height="1000"> </object>
+  <div class="gauge-wrap">
+    <div class="gauge">
+      <div class="mask full">
+        <div class="fill"></div>
+      </div>
+      <div class="mask half">
+        <div class="fill"></div>
+      </div>
+      <div class="inside-circle"> 75% </div>
+    </div>
   </div>
+  
+    </div>
+  </div> 
 </body>
 </html>
