--- a/02-JavaScript/05-Objects and Arrays/shimon/Home Work/shimon - mission 12 JS ARRAY/main.html
+++ b/02-JavaScript/05-Objects and Arrays/shimon/Home Work/shimon - mission 12 JS ARRAY/main.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <script src="main.js"></script> 
+  <script src="main.js">
+      
+  </script>  
 </body>
 </html>
