--- a/02-JavaScript/05-Objects and Arrays/marina/HOME/movie.html
+++ b/02-JavaScript/05-Objects and Arrays/marina/HOME/movie.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="filter.js"></script>
+    <script src="movie.js"></script>
 </body>
 </html>
