--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork/arraysAndFunctions.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork/arraysAndFunctions.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="arraysAndFunctions.html"></script>
+    <script src="arraysAndFunctions.js"></script>
 </body>
 </html>
