YOSSI_CSS FINAL PROJECT

--- a/01-HTML-CSS/09-animations/CSSfinal pro/YOSSI_CSS FINAL PROJECT/index.html
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/YOSSI_CSS FINAL PROJECT/index.html
@@ -76,7 +76,7 @@
             <div id="slide-pic">
                 <img src="images/Coconut.png" alt="">
                 <img src="images/Apple.png" alt="">
-                <img src="images/Apple.png" alt="">
+                <img src="images/Cherries.png" alt="">
                 <img src="images/Banana.png" alt="">
             </div>
         </div>
