--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -90,17 +90,22 @@
     <div class="cartgarden">
         <div class="maintree">
             <div class="flowerCircle">
-                <p>10% off first order!</p>
+                <p>10% off next order!</p>
             </div>
             <span class="tree__leaf tree__leaf--left"></span>
             <span class="tree__leaf tree__leaf--right"></span>
         </div>
         <div class=tree2>
+            <div class="flowerCircle2">
+                <p>Thank You for Purchasing!</p>
+            </div>
+
+
             <span class="tree__leaf tree__leaf--left"></span>
-            <span class="tree__leaf tree__leaf--right"></span>
+
         </div>
         <img src="imgCart/grass.jpg">
-        
+
 
     </div>
 </body>
