--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/mainpage.html
@@ -29,10 +29,14 @@
     </div>
 
     <div class="plantsGrid">
+        
         <div class="plantsGrid_boxitem" style="background-image: url(img/plant1.jpg);">
+            <a href="plantCard.html">
             <h1>Milanus</h1>
             <h2>Tropical</h2>
+        </a>
         </div>
+    
         <div class="plantsGrid_boxitem" style="background-image: url(img/plant2.jpg);">
             <h1>Excelsa</h1>
             <h2>Suculent</h2>
