--- a/01-HTML-CSS/09-animations/chaim/index.html
+++ b/01-HTML-CSS/09-animations/chaim/index.html
@@ -12,13 +12,10 @@
   <div class="animations">
       <div class="box">
       <img src="0.jfif" alt="">
-      <h1>Finding the best car insurance company for you</h1>
-      <p>Pricing and discounts made up a portion of each insurer’s score, but we know that cost is the top factor for many auto insurance shoppers<br> Since pricing is based on personal factors including your age, location, <br> and credit history and gender (in most cases), it’s important to shop around for car insurance quotes.</p>
-    <p>If price is the most important factor in your search, comparing car insurance quotes can help you find the cheapest rate.<br> But your shopping experience will also shed light on a company’s customer service standards.</p>
-    <h2>Insurance and investing for your many sides</h2>
-    <h3>We've been protecting people, businesses and futures for more than 90 years.</h3>
+      <h1>bmw x5 35i iii f15</h1>
+    <h3>35,800$</h3>
+    <h4>the best price</h4>
     <div class="box1">
-    <img src="1.png" alt="">
     <div class="box2">
         <img src="2.png" alt="">
     <div class="box3">
